ACS-10505 fixing unit test cases